# CoverageType

./: .gitignore  dune-project  meta-config.json
ast/: ast.ml  astHelper.ml  dune  fv.ml  map.ml  parseTree.ml  subst.ml
auxtyping/: auxtyping.ml  dune  rctx.ml  subcty.ml  subrty.ml  tyfunc.ml  wellfound.ml
basic_typing/: dune
data/PLDI23/stlc/: gen_term_size.ml
data/monad/: case1.ml  tree2list.ml
data/predefined/: axioms.ml  axioms_bak.ml  basic_typing.ml  refinement_typing.ml
data/test_cases/: basic_int.ml
formalization/: BasicTyping.v  CoreLang.v  Denotation.v  Instantiation.v
frontend_opt/: dune  frontend_opt.ml  to_axiom.ml  to_cty.ml  to_item.ml  to_judgement.ml  to_notation.ml  to_raw_term.ml  to_rty.ml  to_type_dec.ml
language/: dune  language.ml
lib/: dune
preprocess/: basic_typing.ml  dune  normalization.ml  preprocess.ml
test/: dune
typing/: .#bidirect.ml  bidirect.ml  common.ml  dune  itemcheck.ml  typing.ml
