(library
 (public_name CoverageType.preprocess)
 (name preprocess)
 (wrapped true)
 (libraries core zutils language)
 (modules
   basic_typing
   normalization
   preprocess
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
)
