(library
 (public_name CoverageType.typing)
 (name typing)
 (wrapped true)
 (libraries core zutils language auxtyping)
 (modules
   common
   bidirect
   typing
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
)
